--- a/html/fragancias.html
+++ b/html/fragancias.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/fragancias.css" />
+    <link rel="stylesheet" href="../sass/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -33,32 +33,40 @@
     </header>
     <main>
       <div class="table">
-        <div class="header">Nombre:</div>
-        <div class="header">Pais:</div>
-        <div class="header">Contenido:</div>
-        <div class="header">Precio:</div>
+        <div class="header"><p>Nombre:</p></div>
+        <div class="header"><p>Pais:</p></div>
+        <div class="header"><p>Contenido:</p></div>
+        <div class="header"><p>Precio:</p></div>
 
-        <div class="cell">Lataffa</div>
-        <div class="cell">Dubai</div>
-        <div class="cell">100ml</div>
-        <div class="cell">$1.000</div>
+        <div class="cell"><p>Lataffa</p></div>
+        <div class="cell"><p>Dubai</p></div>
+        <div class="cell"><p>100ml</p></div>
+        <div class="cell"><p>$1.000</p></div>
 
-        <div class="cell">Tom Ford</div>
-        <div class="cell">USA</div>
-        <div class="cell">100ml</div>
-        <div class="cell">$2.000</div>
+        <div class="cell"><p>Tom Ford</p></div>
+        <div class="cell"><p>USA</p></div>
+        <div class="cell"><p>100ml</p></div>
+        <div class="cell"><p>$2.000</p></div>
 
-        <div class="cell">Valentino</div>
-        <div class="cell">Italy</div>
-        <div class="cell">100ml</div>
-        <div class="cell">$1.500</div>
+        <div class="cell"><p>Valentino</p></div>
+        <div class="cell"><p>Italy</p></div>
+        <div class="cell"><p>100ml</p></div>
+        <div class="cell"><p>$1.500</p></div>
 
-        <div class="cell">Paco Rabanne</div>
-        <div class="cell">France</div>
-        <div class="cell">100ml</div>
-        <div class="cell">$700</div>
+        <div class="cell"><p>Paco Rabanne</p></div>
+        <div class="cell"><p>France</p></div>
+        <div class="cell"><p>100ml</p></div>
+        <div class="cell"><p>$700</p></div>
       </div>
     </main>
+    <footer>
+      <div>
+        <a class="footer-a" href="./nosotros.html">Nosotros</a>
+        <a class="footer-a" href="./envios.html">Envios</a>
+        <a class="footer-a" href="./fragancias.html">Fragancias</a>
+        <a class="footer-a" href="./marcas.html">Marcas</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
