--- a/html/envios.html
+++ b/html/envios.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/envios.css" />
+    <link rel="stylesheet" href="../sass/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <table>
+      <table class="table-envios">
         <thead>
           <tr>
             <th>Ciudad</th>
@@ -59,6 +59,14 @@
         </tbody>
       </table>
     </main>
+    <footer>
+      <div>
+        <a class="footer-a" href="./nosotros.html">Nosotros</a>
+        <a class="footer-a" href="./envios.html">Envios</a>
+        <a class="footer-a" href="./fragancias.html">Fragancias</a>
+        <a class="footer-a" href="./marcas.html">Marcas</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
