--- a/html/marcas.html
+++ b/html/marcas.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/marcas.css" />
+    <link rel="stylesheet" href="../sass/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,32 +36,60 @@
       <section class="brands-section">
         <h2>Nuestras Marcas</h2>
         <div class="brands-grid">
-          <div class="brand-card-1">
+          <div
+            data-aos="flip-right"
+            data-aos-duration="1000"
+            class="brand-card-1"
+          >
             <img src="../imagenes/lataffa logo.webp" alt="Marca 1" />
             <p>Laffata</p>
           </div>
-          <div class="brand-card-2">
+          <div
+            data-aos="flip-right"
+            data-aos-duration="1500"
+            class="brand-card-2"
+          >
             <img src="../imagenes/Tom-Ford-logo.png" alt="Marca 2" />
             <p>Tom Ford</p>
           </div>
-          <div class="brand-card-1">
+          <div
+            data-aos="flip-right"
+            data-aos-duration="2000"
+            class="brand-card-1"
+          >
             <img
               src="../imagenes/428985979cdbbf59b4291e46d889be5c.jpg"
               alt="Marca 3"
             />
             <p>Valentino</p>
           </div>
-          <div class="brand-card-1">
+          <div
+            data-aos="flip-right"
+            data-aos-duration="2500"
+            class="brand-card-1"
+          >
             <img src="../imagenes/paco-rabanne-1.svg" alt="Marca 3" />
             <p>Paco Rabbane</p>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div>
+        <a class="footer-a" href="./nosotros.html">Nosotros</a>
+        <a class="footer-a" href="./envios.html">Envios</a>
+        <a class="footer-a" href="./fragancias.html">Fragancias</a>
+        <a class="footer-a" href="./marcas.html">Marcas</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
