--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/nosotros.css" />
+    <link rel="stylesheet" href="../sass/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,30 +33,42 @@
       </nav>
     </header>
     <main>
-      <section class="quienes-somos">
-        <div class="container">
+      <section>
+        <div class="typewriter-container">
           <h2>¿Quiénes Somos?</h2>
-          <p>
+          <p class="typewriter">
             Somos una empresa apasionada por el arte del perfume. Nos dedicamos
             a la venta de fragancias exclusivas, seleccionadas cuidadosamente
             para cada estilo y ocasión.
           </p>
-          <p>
+          <p class="typewriter-2">
             Nuestro objetivo es ofrecer experiencias olfativas únicas, con
             productos originales y de alta calidad, que reflejan elegancia,
             distinción y personalidad.
           </p>
-          <p>
+          <p class="typewriter-3">
             Porque sabemos que un buen perfume no solo se lleva en la piel, sino
             también en la memoria.
           </p>
         </div>
       </section>
     </main>
+    <footer>
+      <div>
+        <a class="footer-a" href="./nosotros.html">Nosotros</a>
+        <a class="footer-a" href="./envios.html">Envios</a>
+        <a class="footer-a" href="./fragancias.html">Fragancias</a>
+        <a class="footer-a" href="./marcas.html">Marcas</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
